Moved pathfinding algorithm in another class and moved all pathfinding fields in the class